# oxidized-mdf

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/: print_all.rs
src/: error.rs  lib.rs  pages.rs  schema.rs  sys.rs
tests/: AWLT2005.mdf  integration_test.rs  spg_verein_TST.mdf
