[package]
name = "oxidized-mdf"
version = "0.1.0"
authors = ["Marc Schreiber <info@schrieveslaach.de>"]
edition = "2018"
description = "A crate for reading data storage files of MSSQL's MDF files"
license = "GPL-3.0"

[dependencies]
async-std = "1.6"
byteorder = "1.3"
encoding_rs = "0.8"
num-bigint = "0.3"

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
rstest = "0.6"
