[package]
name = "oxidized-mdf"
version = "0.1.0"
authors = ["Marc Schreiber <info@schrieveslaach.de>"]
edition = "2018"
description = "A crate for reading data storage files of MSSQL's MDF files"
license = "GPL-3.0"

[dependencies]
async-std = "1.9"
bitvec = "0.19"
byteorder = "1.4"
chrono = "0.4"
encoding_rs = "0.8"
futures-lite = "1.11"
num-bigint = "0.3"
rust_decimal = "1.10"
uuid = "0.8"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
pretty_assertions = "0.6"
prettytable-rs = "0.8"
rstest = "0.6"
structopt = "0.3"
